--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
         <p class="editable">
           Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community.
         </p>
-    
+
         <a class="button editable" href="https://www.paypal.com/pools/c/8or5bHxddD" target="_blank"> Support </a>
       </div>
     </div>
@@ -66,7 +66,7 @@ layout: default
 
 
       <!-- SNOWBALL INFO -->
-      <div class="grid padded-1">
+      <div class="grid padded-1 snowballBIG">
         <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%">
         </div>
 
@@ -77,9 +77,11 @@ layout: default
         </h2>
         <p class="editable">
         Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
-        <br>
-        <br>
+        <!-- <br>
+        <br> -->
         </p>
+
+       <!-- <img src="/images/Snowball.png" class="mob-hide editable" alt="Arrow Cafe Snowball French Quarter" align="right" width="54%"> -->
       <!-- <a class="button editable" href="#"> Collaboraters </a> -->
       </div>
     </div>
@@ -97,7 +99,8 @@ layout: default
 
 
   <!-- MERCH w/BUTTONS -->
-  <section class="padded centered" id="merch">
+  <section class="padded centered beans" id="merch">
+    <div class="">
     <h2 class="editable">
       Arrow Merch
     </h2>
@@ -105,7 +108,9 @@ layout: default
       Currently all merch is available to purchase through our carry-out window.
       <br>
       Check back soon for options to buy online!
+      <br>
     </p>
+    </div>
 
     <div class="grid">
       <div class="col-3_md-6_sm-12 padded-1">
