--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ layout: default
           About Arrow
         </h2>
         <p class="editable">
-          Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community.
+          Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! <br><br> We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community.
         </p>
 
         <a class="button editable" href="https://www.paypal.com/pools/c/8or5bHxddD" target="_blank"> Support </a>
@@ -100,7 +100,7 @@ layout: default
 
   <!-- MERCH w/BUTTONS -->
   <section class="padded centered beans" id="merch">
-    <div class="">
+    <div class="padded-1">
     <h2 class="editable">
       Arrow Merch
     </h2>
