--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@ layout: default
           <i class="far fa-envelope"></i>
         </a>
       </nav>
-
     </div>
+
+    <div class="centered center credit"><a href="https://pinkmoon-studio.com/" target="_blank">Designed by Pink Moon Studio</a></div>
 
   </footer>
