--- a/index.html
+++ b/index.html
@@ -232,6 +232,6 @@ layout: default
       </nav>
     </div>
 
-    <div class="centered center credit"><a href="https://pinkmoon-studio.com/" target="_blank">Designed by Pink Moon Studio</a></div>
+    <div class="centered center credit"><a href="https://pinkmoon-studio.com/" target="_blank">Designed by: <br><span class="creditlogo" Pink Moon Studio</a></div>
 
   </footer>
