--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@ layout: default
       </nav>
     </div>
 
-    <div class="centered center credit"><a href="https://pinkmoon-studio.com/" target="_blank">Designed by: <br><span class="creditlogo"> Pink Moon Studio</a></div>
+    <div class="centered center credit">
+      <p>Designed by:</p>
+      <a href="https://pinkmoon-studio.com/" target="_blank">
+      <img src="/images/pmsFAV.png" alt="Pink Moon Studio Portfolio Arrow Cafe" class="editable" width="30%">
+      </a>
+
+    </div>
 
   </footer>
