--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@ layout: default
       </nav>
     </div>
 
-    <div class="centered center credit">
-      <p>Designed by:</p>
+    <div class="centered center">
+      <p class="credit">Designed by:</p>
       <a href="https://pinkmoon-studio.com/" target="_blank">
       <img src="/images/pmsFAV.png" alt="Pink Moon Studio Portfolio Arrow Cafe" class="editable" width="20%">
       </a>
