--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ layout: default
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13826.691885613254!2d-90.0685139!3d29.9600839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7b9ecc26045ee330!2sArrow%20Cafe!5e0!3m2!1sen!2sus!4v1591370772651!5m2!1sen!2sus" width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
     <!-- CONTACT INFO -->
-    <div class="col-6_sm-12-middle padded-1">
+    <div class="col-6_sm-12-middle padded">
       <h2 class="editable">
         Visit Us
       </h2>
@@ -232,12 +232,12 @@ layout: default
       </nav>
     </div>
 
-    <div class="centered center">
-      <p class="credit">Designed by:</p>
-      <a href="https://pinkmoon-studio.com/" target="_blank">
-      <img src="/images/pmsFAV.png" alt="Pink Moon Studio Portfolio Arrow Cafe" class="editable" width="20%">
+    <div class="centered center credit">
+      <a  href="https://pinkmoon-studio.com/" target="_blank"> Designed by:
+        <br>
+        <span class="creditlogo">
+        Pink Moon Studio
+      <!-- <img src="/images/pmsFAV.png" alt="Pink Moon Studio Portfolio Arrow Cafe" class="editable" width="5%"> -->
       </a>
-
     </div>
-
-  </footer>
+      </footer>
