--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 layout: default
 title: Arrow Cafe
 ---
-  <!-- ABOUT SECTION -->
+
+<!-- ABOUT SECTION -->
   <section class="padded">
     <!-- ABOUT ARROW CAFE & IMAGE -->
     <div class="grid padded-1">
-      <div class="col-6_sm-12-middle" id="about"> <img src="/images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%">
+      <div class="col-6_sm-12-middle" id="about"> <img src="/images/about3.jpg" alt="Arrow Cafe Owners in French Quarter" class="editable" width="100%" />
       </div>
       <div class="col-6_sm-12-middle padded-about arrows">
         <h2 class="editable">
           About Arrow
         </h2>
         <p class="editable">
-          Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody! <br><br> We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community.
+          Located on the outer layer of the French Quarter, Arrow cafe is a place for everybody!<br /><br />We have a rotating group of artists and makers that use our space as a gallery for their art and art prints. We are dedicated to working with our community.
         </p>
 
         <a class="button editable" href="https://www.paypal.com/pools/c/8or5bHxddD" target="_blank"> Support </a>
@@ -33,25 +34,25 @@ title: Arrow Cafe
       </div>
 
       <div class="col-6_sm-12-middle padded-about">
-        <img src="/images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%">
+        <img src="/images/coffee1.png" class="editable" alt="Arrow Cafe Coffee French Quarter" width="100%" />
       </div>
       </div>
 
 
       <!-- SNOWBALL INFO -->
       <div class="grid padded-1 snowballBIG">
-        <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%">
+        <div class="col-6_sm-12-middle"> <img src="/images/snowball.jpg" class="editable" alt="Arrow Cafe Snowball French Quarter" width="100%" />
         </div>
 
         <div class="col-6_sm-12-middle padded-about snowball">
           <!-- <h4 class="subtle-heading"> a place for community</h4> -->
           <h2 class="editable">
-        It's Hot Y'all
-        </h2>
+            It's Hot Y'all
+          </h2>
         <p class="editable">
-        Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
-        <!-- <br>
-        <br> -->
+          Our newest addition to the family is our Sno wizard sno-ball machine! Come get weird with us!
+          <!-- <br>
+                  <br> -->
         </p>
 
     <!-- <img src="/images/Snowball.png" class="mob-hide editable" alt="Arrow Cafe Snowball French Quarter" align="right" width="54%"> -->
@@ -66,7 +67,7 @@ title: Arrow Cafe
     Menu
   </h2>
 
-    <div class="col-12_sm-12-middle centered padded-1 menu"> <img src="/images/menu.jpg" class="editable">
+    <div class="col-12_sm-12-middle centered padded-1 menu"> <img src="/images/menu.jpg" class="editable" />
     </div>
 </section>
 
@@ -79,15 +80,15 @@ title: Arrow Cafe
     </h2>
     <p class="emphasis">
       Currently all merch is available to purchase through our carry-out window.
-      <br>
+      <br />
       Check back soon for options to buy online!
-      <br>
+      <br />
     </p>
     </div>
 
     <div class="grid">
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="/images/merch1.jpg" alt="Arrow Cafe Merch" class="editable" width="250">
+        <img src="/images/merch1.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
         <h4 class="editable">
           Iced Coffee Jug
         </h4>
@@ -98,7 +99,7 @@ title: Arrow Cafe
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="/images/merch3.png" alt="Arrow Cafe Merch" class="editable" width="250">
+        <img src="/images/merch3.png" alt="Arrow Cafe Merch" class="editable" width="250" />
         <h4 class="editable">
           Arrow Tees
         </h4>
@@ -109,7 +110,7 @@ title: Arrow Cafe
       </div>
 
       <div class="col-3_md-6_sm-12 padded-1">
-        <img src="/images/merch4.png" alt="Arrow Cafe Merch" class="editable" width="250">
+        <img src="/images/merch4.png" alt="Arrow Cafe Merch" class="editable" width="250" />
         <h4 class="editable">
           Coffee Beans
         </h4>
@@ -120,7 +121,7 @@ title: Arrow Cafe
       </div>
 
     <div class="col-3_md-6_sm-12 padded-1">
-      <img src="/images/merch5.jpg" alt="Arrow Cafe Merch" class="editable" width="250">
+      <img src="/images/merch5.jpg" alt="Arrow Cafe Merch" class="editable" width="250" />
       <h4 class="editable">
         Totes
       </h4>
